--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
                 padding-top:50px;
             }
             form.myLoginForm{
-                width:700px;
+                width:500px;
                 height: 450px;
                 background-color:white;
+                padding:20px;
                 /* 
                     margin: t r b l;
                     margin:t/b l/r;
@@ -31,12 +32,36 @@
                 */ 
                 margin:50px auto;
             }
+
+            /*
+                desendant selector
+
+                parent child{
+                    property:value;
+                }
+            */
+            form.myLoginForm input{
+                width:100%;
+                height:40px;
+                margin-bottom: 20px;
+                border:1px solid #d9d9d9;
+            }
+
         </style>
     </head>
     <body>
         <div id="box">
             <form class="myLoginForm">
-
+                <h1>Login To Your Account</h1>
+                <div>
+                    <input type="text" placeholder="Username" />    
+                </div>
+                <div>
+                    <input placeholder="Password" type="password" />
+                </div>
+                <div>
+                    <input type="submit" value="Login" />
+                </div>
             </form>
         </div>
         
